исправления и добавления
