# src/main/java/com/example/book_catalogue/contorller/AuthorController.java
@@ -1,9 +1,8 @@
 package com.example.book_catalogue.contorller;
 
 import com.example.book_catalogue.AuthorApi;
-import com.example.book_catalogue.model.AuthorRequestDto;
-import com.example.book_catalogue.model.AuthorResponseDto;
-import com.example.book_catalogue.model.AuthorWithBooksResponseDto;
+import com.example.book_catalogue.model.*;
+import com.example.book_catalogue.service.AuthorService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -13,33 +12,48 @@ import java.util.List;
 @RestController
 @RequiredArgsConstructor
 public class AuthorController implements AuthorApi {
+
+    private final AuthorService authorService;
+
     @Override
     public ResponseEntity<AuthorResponseDto> createAuthor(AuthorRequestDto authorRequestDto) {
-        return AuthorApi.super.createAuthor(authorRequestDto);
+        AuthorResponseDto author = authorService.createAuthor(authorRequestDto);
+        return ResponseEntity.ok(author);
     }
 
     @Override
     public ResponseEntity<Void> deleteAuthor(Long id) {
-        return AuthorApi.super.deleteAuthor(id);
+        authorService.deleteAuthor(id);
+        return ResponseEntity.noContent().build();
     }
 
     @Override
     public ResponseEntity<AuthorWithBooksResponseDto> getAuthorById(Long id) {
-        return AuthorApi.super.getAuthorById(id);
+        AuthorWithBooksResponseDto authorById = authorService.getAuthorById(id);
+        return ResponseEntity.ok(authorById);
     }
 
     @Override
     public ResponseEntity<List<AuthorResponseDto>> getAuthorsByName(String name) {
-        return AuthorApi.super.getAuthorsByName(name);
+        List<AuthorResponseDto> authorsByName = authorService.getAuthorsByName(name);
+        return ResponseEntity.ok(authorsByName);
     }
 
     @Override
-    public ResponseEntity<List<AuthorResponseDto>> getAuthorsByPage(Integer pageNumber) {
-        return AuthorApi.super.getAuthorsByPage(pageNumber);
+    public ResponseEntity<Long> getAuthorsCount() {
+        Long authorsCount = authorService.getAuthorsCount();
+        return ResponseEntity.ok(authorsCount);
     }
 
     @Override
-    public ResponseEntity<AuthorResponseDto> updateAuthor(AuthorRequestDto authorRequestDto) {
-        return AuthorApi.super.updateAuthor(authorRequestDto);
+    public ResponseEntity<List<AuthorResponseDto>> getAuthorsByPage(PageRequestDto pageRequestDto) {
+        List<AuthorResponseDto> authorsByPage = authorService.getAuthorsByPage(pageRequestDto);
+        return ResponseEntity.ok(authorsByPage);
+    }
+
+    @Override
+    public ResponseEntity<AuthorWithBooksResponseDto> updateAuthor(AuthorUpdateRequestDto authorUpdateRequestDto) {
+        AuthorWithBooksResponseDto authorResponseDto = authorService.updateAuthor(authorUpdateRequestDto);
+        return ResponseEntity.ok(authorResponseDto);
     }
 }
