# src/main/java/com/example/book_catalogue/exception/InternalServerErrorException.java
@@ -1,0 +1,7 @@
+package com.example.book_catalogue.exception;
+
+public class InternalServerErrorException extends RuntimeException {
+    public InternalServerErrorException(String message) {
+        super(message);
+    }
+}
