# src/main/java/com/example/book_catalogue/exception/ResourceNotFoundException.java
@@ -1,0 +1,7 @@
+package com.example.book_catalogue.exception;
+
+public class ResourceNotFoundException extends RuntimeException {
+    public ResourceNotFoundException(String message) {
+        super(message);
+    }
+}
