# src/main/java/com/example/book_catalogue/exception/handler/model/ErrorModel.java
@@ -1,0 +1,7 @@
+package com.example.book_catalogue.exception.handler.model;
+
+public record ErrorModel(
+        Integer status,
+        String message
+) {
+}
